# 5GRecommendationTool

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  api_server.py  code_standards.py  config.json  gui.py  pyproject.toml  quality_assessment_report_20250617_024926.json  quality_assessment_report_20250617_030121.json  recommendation_engine.py  requirements.txt  run_quality_assessment.py  start.bat  start_api.bat  start_gui.bat
grec5/: api_client_example.py  api_server.py  code_standards.py  data_sources.py  gui.py  run_quality_assessment.py
scripts/: start.bat  start_api.bat  start_gui.bat
tests/: test_all.py
